--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     My research interest lies in robust robotic skill learning,
                     with a focus on creating robots that are user-friendly and require minimal instruction for everyday individuals. 
                     <!-- The core of my research lies in enhancing the adaptability and resilience of robotic systems in diverse and changing environments.  -->
-                    My latest projects involve learning constraints from the demonstrations for safe skill learning.
+                    My latest projects involves learning constraints from the demonstrations for safe skill learning.
                     <br/>
                     <br/>
                      I received my bachelor's degree from KAIST in August 2021, 
@@ -187,7 +187,7 @@
                         </td>
                         <td>
                             <b>Autonomous Ball-picking Vehicle</b><br />
-                            Capstone Design I, 2018<br />
+                            Capstone Design, 2018<br />
                         <br/>
                         Undergraduate Capstone project at KAIST. 
                             We built an autonomous ball-collecting vehicle designed to pick up blue balls while avoiding red balls. 
@@ -206,7 +206,7 @@
                         <b>Human Powered Aircraft</b><br />
                         Human Powered Aircraft Competition, 2013<br />
                         <br/>
-                        Participated in the 2013 HPAC hosted by KARI (Korea Aerospace Research Institute). 
+                        Participated in the 2013 HPAC hosted by Korea Aerospace Research Institute (KARI). 
                         We built a human-powered aircraft that successfully flew approximately 20 meters. 
                         <br/>
                         In this project, my responsibilities were specifically focused on designing and making the wings.
@@ -223,10 +223,52 @@
         <tbody>
             <tr>
                 <td >
-                    <h2>Contact Information</h2>
+                    <h2>Additional Information</h2>
                     <p>Email: wognl0402@kaist.ac.kr</p>
                     <!-- <p>Phone: (+82) 010-456-7890</p> -->
                     <!-- Add social media links or other contact methods -->
+                    <table class="compact-table">
+                        <colgroup>
+                            <col width="28%" />
+                            <col width="72%" />
+                        </colgroup>
+                        <thead>
+                        <tr>
+                        <th colspan="2"></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        
+                    <p>List of things I have worked with: </p>
+                    <!-- <p>List of Programming Languages I have worked with: Python (pytorch, JAX), C, C++, MATLAB and Rust</p> -->
+                    <!-- <p>List of Simulators I have worked with: Python (pytorch, JAX), C, C++, MATLAB and Rust</p> -->
+                        <tr>
+                            <td style="text-align:right" >
+                                <b>Robots:</b>
+                            </td>
+                            <td >
+                                Franka Emika Panda, UR5e, ShadowHand Lite, and RBQ-3 from Rainbow Robotics
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td style="text-align:right">
+                                <b>Languages:</b>
+                            </td>
+                            <td>
+                                Python (pytorch, JAX), C, C++, MATLAB and Rust
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td style="text-align:right">
+                                <b>Simulators:</b>
+                            </td>
+                            <td>
+                                Box2d, PyBullet, and IsaacSim
+                            </td>
+                        </tr>
+                        </tbody></table>
                 </td>
             </tr>
         </tbody>
