--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <br/>
                      I received my bachelor's degree from KAIST in August 2021, 
                      where I majored in <b>Mechanical Engineering</b> and <b>Physics</b>, and a minor in <b>Computer Science</b>. I had the honor of being awarded the KAIST Presidential Fellowship.
+                     Here is my <a href="Jaehwi_jang_CV.pdf" download="Jaehwi_jang_CV.pdf">CV</a>.
                     </p>
             </td>
         <td class="image-container">
