--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" href="images/generic_icon.png" sizes="16x16">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3E4EJM04HN"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3E4EJM04HN');
+    </script>
 </head>
 
 <body>
@@ -14,8 +22,8 @@
     </div> -->
         <table>
         <colgroup>
-        <col width="72%" />
-        <col width="28%" />
+        <col width="73%" />
+        <col width="27%" />
         </colgroup>
         <thead>
         <tr>
@@ -229,8 +237,8 @@
                     <!-- Add social media links or other contact methods -->
                     <table class="compact-table">
                         <colgroup>
-                            <col width="30%" />
-                            <col width="70%" />
+                            <col width="20%" />
+                            <col width="80%" />
                         </colgroup>
                         <thead>
                         <tr>
