fixed the margins

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     My latest projects involves learning constraints from the demonstrations for safe skill learning.
                     <br/>
                     <br/>
-                     I received my bachelor's degree from KAIST in August 2021, 
-                     where I majored in <b>Mechanical Engineering</b> and <b>Physics</b>, and a minor in <b>Computer Science</b>. I had the honor of being awarded the KAIST Presidential Fellowship.
+                     I received my bachelor's degree from KAIST in 2021, 
+                     where I majored in <b>Mechanical Engineering</b> and <b>Physics</b>, and minored in <b>Computer Science</b>. I had the honor of being awarded the KAIST Presidential Fellowship.
                     </p>
             </td>
         <td class="image-container">
@@ -54,26 +54,15 @@
         
         </tbody>
         </table>
-        <tbody>
-            <tr>
-                <td >
+        <table >
+        <tbody >
+            <tr >
+                <td style="padding:10px;vertical-align:bottom">
                     <h2>Honors and Fellowships</h2>
-                    <!-- <p>
-                        Here's another section for more content. You can use this to highlight different projects, publications, or any other information you'd like to showcase.
-                    </p> -->
-                    <!-- More content here -->
-                </td>
-
-            </tr>
-        </tbody>
-        <tr>
-        <td style="padding:20px;width:100%;vertical-align:middle">
-          <p>
-           <b>Fulbright U.S.-Korea Presidential STEM Initiative Award </b>, 2024~ <br>
+            <div style="font-size: 16px; margin-bottom:-15px;color: black">&#128509;<b>Fulbright U.S.-Korea Presidential STEM Initiative Award</b>, 2024~ </div><br>
            <b>Best Undergraduate Student Award</b>, 2022 <br>
            <b>KAIST Presidential Fellowship</b>, 2016~ <br>
            <b> </b>
-          </p>
         </td>
       </tr>
     </tbody></table>
@@ -82,10 +71,6 @@
             <tr>
                 <td >
                     <h2>Publications</h2>
-                    <!-- <p>
-                        Here's another section for more content. You can use this to highlight different projects, publications, or any other information you'd like to showcase.
-                    </p> -->
-                    <!-- More content here -->
                 </td>
 
             </tr>
@@ -112,7 +97,7 @@
                         <b>Inverse Constraint Learning and Generalization by Transferable Reward Decomposition</b><br />
                         <b>Jaehwi Jang</b>, Minjae Song, Daehyung Park<br />
                         <i> IEEE Robotics and Automation Letters (RA-L), 2024 </i> <br />
-                        <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://youtu.be/SD9HV1z5owk" target="_blank">[Video]</a>
+                        <a href="https://arxiv.org/abs/2306.12357" target="_blank">[PDF]</a> <a href="https://youtu.be/SD9HV1z5owk" target="_blank">[Video]</a> <a href="https://sites.google.com/view/transferable-cl" target="_blank">[Site (ongoing)]</a>
                     </td>
                     </tr>
                     <tr>
@@ -186,7 +171,7 @@
                             Project @ <a href="https://rirolab.kaist.ac.kr/">RIRO Lab</a>, 2023<br />
                         <br/>
                         In this project, we train robotic agents to acquire human-like skills through interactive learning. 
-                            We utilize simulated environments in <a href="https://developer.nvidia.com/isaac-sim">IsaacSim</a> or employ teleoperation to guide and teach the robots.<br />
+                            We utilize simulated environments in <a href="https://developer.nvidia.com/isaac-sim">IsaacSim</a> or employ teleoperation to guide and teach the robots, such as deformable object manipulation.<br />
                             <!-- <a href="https://journals.sagepub.com/eprint/PSW4Z5AXF4AYTSXRN7AI/full" target="_blank">[PDF]</a> <a href="https://www.youtube.com/watch?v=BfCeYsTvaOw&amp;feature=youtu.be" target="_blank">[Video]</a><br /> -->
                         </td>
                         </tr>
